taskbar z-index problem solved

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -187,6 +187,7 @@
     background-color: rgba(0, 0, 0, 0.9);
     margin: 0;
     opacity: 0.7;
+    z-index: 10000;
     
 }
 .time-div{
